<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="controller.CreateGarageActivity"
    tools:showIn="@layout/activity_create_garage">

    <EditText
        android:id="@+id/motorcycleEarlyBirdEntry"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/early_bird"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/motorcycleRateEntry"
        app:layout_constraintTop_toTopOf="@+id/carEarlyBirdEntry" />

    <EditText
        android:id="@+id/carEarlyBirdEntry"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/early_bird"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/carRateEntry"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/truckEarlyBirdEntry"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/early_bird"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/truckRateEntry"
        app:layout_constraintTop_toTopOf="@+id/motorcycleEarlyBirdEntry" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:text="Truck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:text="Motorcycle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/managerDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/manager_details"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/truckPaymentTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="116dp"
        android:text="@string/truck_payment"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allowedPaymentTypesLabel" />

    <LinearLayout
        android:layout_width="122dp"
        android:layout_height="132dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/truckPaymentTypeLabel">

        <CheckBox
            android:id="@+id/truckCashCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash_payment" />

        <CheckBox
            android:id="@+id/truckCheckCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_payment" />

        <CheckBox
            android:id="@+id/truckDebitCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debit_payment" />

        <CheckBox
            android:id="@+id/truckCreditCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_payment" />

    </LinearLayout>

    <TextView
        android:id="@+id/motorcyclePaymentTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="204dp"
        android:text="@string/motorcycle_payment"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allowedPaymentTypesLabel" />

    <TextView
        android:id="@+id/carPaymentTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/car_payment"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allowedPaymentTypesLabel" />

    <EditText
        android:id="@+id/truckRateEntry"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="88dp"
        android:ems="10"
        android:hint="@string/car_costs"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/truckSpacesEntry"
        app:layout_constraintTop_toBottomOf="@+id/motorcycleRateEntry" />

    <EditText
        android:id="@+id/motorcycleRateEntry"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="88dp"
        android:ems="10"
        android:hint="@string/car_costs"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/motorcycleSpacesEntry"
        app:layout_constraintTop_toBottomOf="@+id/carRateEntry" />

    <EditText
        android:id="@+id/motorcycleSpacesEntry"
        android:layout_width="85dp"
        android:layout_height="46dp"
        android:layout_marginStart="88dp"
        android:ems="10"
        android:hint="@string/car_spaces"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carSpacesEntry" />

    <EditText
        android:id="@+id/truckSpacesEntry"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginStart="88dp"
        android:ems="10"
        android:hint="@string/car_spaces"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motorcycleSpacesEntry" />

    <EditText
        android:id="@+id/carSpacesEntry"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/car_spaces"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/carRateEntry"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="200dp"
        android:ems="10"
        android:hint="@string/car_costs"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/carSpacesEntry"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/allowedPaymentTypesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:text="@string/allowed_payment_types"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vehicleDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/vehicle_details"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="101dp"
        android:layout_height="132dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carPaymentTypeLabel">

        <CheckBox
            android:id="@+id/carCashCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash_payment" />

        <CheckBox
            android:id="@+id/carCheckCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_payment" />

        <CheckBox
            android:id="@+id/carDebitCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debit_payment" />

        <CheckBox
            android:id="@+id/carCreditCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_payment" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="123dp"
        android:layout_height="132dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/motorcyclePaymentTypeLabel">

        <CheckBox
            android:id="@+id/motorcycleCashCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash_payment" />

        <CheckBox
            android:id="@+id/motorcycleCheckCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_payment" />

        <CheckBox
            android:id="@+id/motorcycleDebitCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debit_payment" />

        <CheckBox
            android:id="@+id/motorcycleCreditCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_payment" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="274dp"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/managerUsernameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/manager_username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/managerPasswordEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/manager_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/managerFirstNameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/manager_first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/managerLastNameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/manager_last_name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/createGarageConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:onClick="confirmButton"
        android:text="@string/confirm_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="Car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>